# FireVision

./: Dockerfile  README.md  notebook.ipynb  predict.py  pyproject.toml  test.py  train.py
.github/workflows/: ci.yaml
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  ImageFile.ts  index.css
app/src/components/: BatchResult.tsx  ImageUpload.tsx  Prediction.tsx  Result.tsx  SampleImages.tsx
